--- a/src/scss/components/modules/_case.scss
+++ b/src/scss/components/modules/_case.scss
@@ -2,7 +2,7 @@
   display: none;
 
   position: fixed;
-  z-index: 1002;
+  z-index: 2002;
   top: 50%;
   left: 50%;
 
