--- a/src/scss/components/modules/_loading.scss
+++ b/src/scss/components/modules/_loading.scss
@@ -2,7 +2,7 @@
   @include icon(#fff);
 
   position: fixed;
-  z-index: 1001;
+  z-index: 2001;
   top: 50%;
   left: 50%;
 
