--- a/src/scss/components/modules/_navigation.scss
+++ b/src/scss/components/modules/_navigation.scss
@@ -38,7 +38,6 @@
 
     // Close button
     &.lightcase-icon-close {
-      z-index: 9997;
       top: 15px;
       right: 15px;
       bottom: auto;
