--- a/src/scss/components/modules/_overlay.scss
+++ b/src/scss/components/modules/_overlay.scss
@@ -4,7 +4,7 @@
   height: 100%;
 
   position: fixed;
-  z-index: 1000;
+  z-index: 2000;
   top: 0;
   left: 0;
 
